[package]
name = "malek_dec12_LINES"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stereokit = { path = "../stereokit-rs" }
color-eyre = "0.6.2"
glam={version = "0.22.0", features = ["mint"]}
stereokit-sys = {path = "../stereokit-sys"}
seq-macro = "0.3.1"
levenberg-marquardt = "0.12.0"
nalgebra = "0.31.4"

[[bin]]
name = "2d_links"
path = "2d_links/2d_links.rs"

